--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,29 +1,7 @@
 {
-  "compilerOptions": {
-    "allowJs": true,
-    "baseUrl": ".",
-    "esModuleInterop": true,
-    "experimentalDecorators": true,
-    "isolatedModules": true,
-    "jsx": "preserve",
-    "jsxImportSource": "solid-js",
-    "lib": ["esnext", "dom", "dom.iterable"],
-    "module": "esnext",
-    "moduleResolution": "bundler",
-    "noEmit": true,
-    "resolveJsonModule": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "target": "esnext",
-    "paths": {
-      "@/*": ["src/*"],
-      "@test/*": ["test-support/*"]
-    },
-    "types": ["chrome", "vite/client", "@total-typescript/ts-reset"]
-  },
-  "include": ["typings", "src", "test-support"],
-  "exclude": ["./dist"],
+  "files": [],
   "references": [
+    { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
   ]
 }
