--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,9 +1,18 @@
 {
-  "extends": "./tsconfig.json",
+  "extends": "@tsconfig/node20",
   "compilerOptions": {
-    "allowJs": false,
+    "allowJs": true,
+    "baseUrl": ".",
     "composite": true,
-    "noEmit": false,
+    "isolatedModules": true,
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "noEmit": true,
+    "strict": true,
+    "target": "ES2022",
+    "tsBuildInfoFile": ".tmp/node.tsbuildinfo"
   },
   "include": [
     "vite.config.ts",
