--- a/package.json
+++ b/package.json
@@ -24,50 +24,50 @@
     "*.css"
   ],
   "dependencies": {
-    "@modular-forms/solid": "^0.23.0",
+    "@modular-forms/solid": "^0.24.0",
     "@total-typescript/ts-reset": "^0.6.1",
     "date-fns": "^4.1.0",
     "focus-trap": "^7.6.0",
     "polished": "^4.3.1",
     "remeda": "^2.14.0",
-    "solid-js": "1.8.23",
+    "solid-js": "1.9.1",
     "solid-transition-group": "^0.2.3",
     "type-fest": "^4.26.1",
-    "valibot": "^0.42.1"
+    "valibot": "1.0.0-beta.0"
   },
   "devDependencies": {
     "@pandacss/dev": "^0.46.1",
-    "@solidjs/testing-library": "0.8.9",
+    "@solidjs/testing-library": "0.8.10",
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/user-event": "^14.5.2",
     "@tsconfig/node20": "^20.1.4",
-    "@types/chrome": "^0.0.271",
-    "@types/node": "^20.16.6",
-    "@vitest/coverage-v8": "^2.1.1",
+    "@types/chrome": "^0.0.277",
+    "@types/node": "^20.16.10",
+    "@vitest/coverage-v8": "^2.1.2",
     "autoprefixer": "^10.4.20",
-    "browserslist": "^4.23.3",
+    "browserslist": "^4.24.0",
     "browserslist-to-esbuild": "^2.1.1",
     "eslint": "8.57.0",
-    "eslint-config-love": "^71.0.0",
+    "eslint-config-love": "^83.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.3",
-    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "globals": "^15.9.0",
+    "globals": "^15.10.0",
     "happy-dom": "^15.7.4",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "solid-devtools": "^0.30.1",
     "typescript": "~5.5.4",
-    "typescript-eslint": "^8.7.0",
-    "vite": "^5.4.7",
+    "typescript-eslint": "^8.8.0",
+    "vite": "^5.4.8",
     "vite-bundle-visualizer": "^1.2.1",
     "vite-plugin-html": "^3.2.2",
     "vite-plugin-solid": "2.10.2",
     "vite-plugin-static-copy": "^1.0.6",
-    "vitest": "^2.1.1"
+    "vitest": "^2.1.2"
   },
   "packageManager": "pnpm@9.11.0+sha512.0a203ffaed5a3f63242cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b",
   "pnpm": {
