--- a/package.json
+++ b/package.json
@@ -29,29 +29,29 @@
     "date-fns": "^4.1.0",
     "focus-trap": "^7.6.0",
     "polished": "^4.3.1",
-    "remeda": "^2.15.0",
-    "solid-js": "1.9.2",
+    "remeda": "^2.16.0",
+    "solid-js": "1.9.3",
     "solid-transition-group": "^0.2.3",
     "type-fest": "^4.26.1",
     "valibot": "1.0.0-beta.0"
   },
   "devDependencies": {
-    "@pandacss/dev": "^0.46.1",
+    "@pandacss/dev": "^0.47.0",
     "@solidjs/testing-library": "0.8.10",
     "@testing-library/dom": "10.4.0",
-    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/jest-dom": "^6.6.2",
     "@testing-library/user-event": "^14.5.2",
     "@tsconfig/node20": "^20.1.4",
-    "@tsconfig/recommended": "^1.0.7",
+    "@tsconfig/recommended": "^1.0.8",
     "@tsconfig/strictest": "^2.0.5",
-    "@types/chrome": "^0.0.277",
-    "@types/node": "^20.16.11",
-    "@vitest/coverage-v8": "^2.1.2",
+    "@types/chrome": "^0.0.279",
+    "@types/node": "^20.17.1",
+    "@vitest/coverage-v8": "^2.1.3",
     "autoprefixer": "^10.4.20",
-    "browserslist": "^4.24.0",
+    "browserslist": "^4.24.2",
     "browserslist-to-esbuild": "^2.1.1",
-    "eslint": "9.12.0",
-    "eslint-config-love": "^86.1.1",
+    "eslint": "9.13.0",
+    "eslint-config-love": "^96.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.1",
@@ -61,14 +61,14 @@
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "solid-devtools": "^0.30.1",
-    "typescript": "~5.5.4",
-    "typescript-eslint": "^8.8.1",
-    "vite": "^5.4.8",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.11.0",
+    "vite": "^5.4.10",
     "vite-bundle-visualizer": "^1.2.1",
     "vite-plugin-html": "^3.2.2",
     "vite-plugin-solid": "2.10.2",
     "vite-plugin-static-copy": "^2.0.0",
-    "vitest": "^2.1.2"
+    "vitest": "^2.1.3"
   },
   "packageManager": "pnpm@9.12.2+sha512.22721b3a11f81661ae1ec68ce1a7b879425a1ca5b991c975b074ac220b187ce56c708fe5db69f4c962c989452eee76c82877f4ee80f474cebd61ee13461b6228",
   "pnpm": {
