--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "type": "module",
   "engine": {
-    "node": "^20 || ^22"
+    "node": "^22"
   },
   "scripts": {
     "prepare": "panda codegen --clean",
@@ -41,11 +41,11 @@
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/user-event": "^14.6.1",
-    "@tsconfig/node20": "^20.1.5",
+    "@tsconfig/node22": "^22.0.1",
     "@tsconfig/recommended": "^1.0.8",
     "@tsconfig/strictest": "^2.0.5",
     "@types/chrome": "^0.0.315",
-    "@types/node": "^20.17.30",
+    "@types/node": "^22.14.1",
     "@vitest/coverage-v8": "^3.1.1",
     "autoprefixer": "^10.4.21",
     "browserslist": "^4.24.4",
