--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
     "focus-trap": "^7.6.4",
     "remeda": "^2.21.8",
     "solid-js": "1.9.7",
-    "solid-transition-group": "^0.3.0",
     "type-fest": "^4.41.0",
     "valibot": "1.1.0"
   },
   "devDependencies": {
     "@pandacss/dev": "^0.53.6",
+    "@pandacss/types": "^0.53.6",
     "@solidjs/testing-library": "0.8.10",
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
