--- a/.github/workflows/deploy-demo-page.yml
+++ b/.github/workflows/deploy-demo-page.yml
@@ -17,15 +17,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22
-      - name: Get pnpm store directory
-        id: pnpm-store-dir-path
-        run: echo "dir=$(pnpm store path --silent)" >> $GITHUB_OUTPUT
-      - name: Use pnpm cache
-        uses: actions/cache@v4
-        with:
-          path: ${{ steps.pnpm-store-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('pnpm-lock.yaml') }}
-          restore-keys: ${{ runner.os }}-pnpm-store-
+          cache: pnpm
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
       - name: Build
