chore: bump nodejs version to v24
v24 will be promoted to LTS at the end of October 2025

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "type": "module",
   "engine": {
-    "node": "^22"
+    "node": "^22 || ^24"
   },
   "scripts": {
     "prepare": "panda codegen --clean",
